alignment fixed

--- a/components/HomeFirstBanner/HomeFirstBanner.module.css
+++ b/components/HomeFirstBanner/HomeFirstBanner.module.css
@@ -4,17 +4,16 @@
   background-color: rgba(20, 20, 20, 0.89);
   background-position: 50% 0px;
   background-size: cover;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 .headlineSmall {
-  display: block;
   font-size: 30px;
   font-family: "Bellefair";
   src: local("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
   color: #fff2f2;
-  font-weight: 500;
-  position: relative;
-  z-index: 1;
+
   margin-bottom: 30px;
   padding-top: 30px;
 
